--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@
         <div class="grid">
           <article class="card">
             <h3>Personal Productivity</h3>
-            <p class="muted">Inbox &amp; calendar prioritization; summarization that respects privacy.</p>
+            <p class="muted">Organizes tasks, reminders, and follow-ups automatically — so nothing slips through the cracks</p>
           </article>
           <article class="card">
-            <h3>Family &amp; Education</h3>
-            <p class="muted">Coordination tools for households and students — simple, reliable, and secure.</p>
+            <h3>Small Business Solutions</h3>
+            <p class="muted">No more chasing customers, missed calls, or unpaid invoices — Kribu does it automatically</p>
           </article>
           <article class="card">
-            <h3>Business Workflow Automation</h3>
-            <p class="muted">Lightweight co‑pilots that streamline scheduling, billing, and customer communications.</p>
+            <h3>Large Business Solutions</h3>
+            <p class="muted">Accelerates cloud and AI transformation while reducing complexity, risk, and cost at scale</p>
           </article>
         </div>
       </section>
